[package]
name = "hi-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1.0.128"
tx5 = "0.1.3-beta"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
console_error_panic_hook = "0.1.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
